@@ -11579,4 +11579,6 @@
 	  processed when the poll from the correct device is received (2016-03-20).
 	* sched/wqueue/kwork_signal.c:  Fix logic to find an IDLE worker thread;
 	  the test for busy was backward.  From Linfei Chen (2016-03-22).
-
+	* include/sys/boardctl.h, configs/boardctl.c, and many configurations:  Add
+	  boardctl() support that will permit applications to control USB devices
+	  (2016-03-25).
